# AI-CLI-assist-

./: pyproject.toml
src/ai_cli/: .env  README_EN.txt  README_RUS.txt  __main__.py  env.exsample 
src/ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
